caktus_primer/static/stylus/index.styl
@import 'variables.styl'
@import 'mixins.styl'
@import 'reset.styl'
@import 'colors.styl'
@import 'primer.styl'
@import 'typography.styl'
@import 'layout.styl'
@import 'form.styl'
@import 'colors-page.styl'
@import 'typography-pages.styl'
@import 'lists'
@import 'examples.styl'
@import 'layout-examples.styl'
@import 'layout-whitespace.styl'
@import 'search.styl'

*
	&:first-child
		margin-top: 0
	&:last-child
		margin-bottom: 0

#styleguide-header
	font-size: 150%

.styleguide-code
	font-size: 100%

body
	{join(",", $content-tags)}
		applyColorSet("default")

section
	width: 100%
	background-color: #eeeeee
	box-sizing: border-box

	nav
		width: 100%
		background-color: #e0e0e0
		margin-top: -1em
		margin-left: -1em
		margin-bottom: 1em
		padding: 1em

generate-grid(columns)
	display grid
	grid-template-columns: repeat(columns, auto)
	grid-auto-rows: minmax(100px, auto);
	grid-column-gap: 2vw
	grid-row-gap: 2vw
	background-color: grey
	border: 1px solid

.primer-dropdown
	button
		border-radius: 0
		applyColorSet("elem-affirm")

	ul
		applyColorSet("content-success")
		list-style: none
		margin: 0
		padding: 0
		border: 1px solid lightgrey
		position: absolute
		min-width: 200px

		li
			background-color: transparent

			a
				background-color: transparent
				display: inline-block
				height: 3em
				padding: 1em 2em
				outline: none
				text-decoration: none
				width: 100%

